--- a/css/styles.css
+++ b/css/styles.css
@@ -78,12 +78,14 @@ a, a:hover {
 }
 
 .dsmovie-card-description {
-  padding: 10px 0 20px 0;
+  padding: 10px 20px 20px 20px;
   display: flex;
   flex-direction: column;
-  align-items: center;  
+  align-items: center; 
+  justify-content: space-between; 
   background-color: var(--white);
   border-radius: 0 0 8px 8px;
+  min-height: 150px;
 }
 
 .dsmovie-card-description h3 {
@@ -92,6 +94,7 @@ a, a:hover {
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
   color: var(--text-gray);
+  text-align: center;
 }
 
 .dsmovie-button, .dsmovie-button:hover {
