--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
 :root {
-  --bg-gray: #888;
+  --bg-gray: #ddd;
   --text-gray: #4a4a4a;
   --color-primary: #4d41c0;
   --white: #fff;
+  --text-light-gray: #aaa;
 }
 
 * {
@@ -111,6 +112,7 @@ a, a:hover {
   align-items: center;
   justify-content: center;
   border-radius: 4px;
+  border: 0;
 
 }
 
@@ -121,3 +123,43 @@ a, a:hover {
   padding: 40px 0;
   max-width: 480px;
 }
+
+.dsmovie-form-description {
+  background-color: var(--white);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 0 0 8px 8px;
+}
+
+.dsmovie-form-description h3 {
+  margin-bottom: 20px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  font-size: 13px;
+}
+
+.dsmovie-form-group {
+  margin-bottom: 20px;
+}
+
+.dsmovie-form-group label {
+  font-size: 12px;
+  color: var(--text-light-gray);
+}
+
+.dsmovie-form {
+  width: 100%;
+}
+
+.dsmovie-form-btn-container {
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+  font-weight: 700;
+}
+
