--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
   --color-primary: #4d41c0;
   --white: #fff;
   --text-light-gray: #aaa;
+  --bg-yellow: #FFBB3A;
+  --reviews-color: #989898;
 }
 
 * {
@@ -88,7 +90,7 @@ a, a:hover {
   justify-content: space-between; 
   background-color: var(--white);
   border-radius: 0 0 8px 8px;
-  min-height: 150px;
+  height: 220px;
 }
 
 .dsmovie-card-description h3 {
@@ -98,6 +100,30 @@ a, a:hover {
   font-weight: 700;
   color: var(--text-gray);
   text-align: center;
+  margin-bottom: 23px;
+}
+
+.dsmovie-card-description-bottom {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dsmovie-card-description-bottom h4 {
+  font-size: 16px;
+  color: var(--bg-yellow);
+  font-weight: 700;
+}
+
+.dsmovie-card-description-bottom p {
+  font-size: 12px;
+  font-weight: 400;
+  color: var(--reviews-color);
+  margin-bottom: 10px;
+}
+
+.dsmovie-card-description-bottom img {
+  width: 22px;
 }
 
 .dsmovie-button, .dsmovie-button:hover {
