Componente de paginação

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* ------------------------------ Geral ------------------------------ */
+/* ------------------------------ Start ------------------------------ */
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
@@ -27,7 +27,7 @@ html, body {
   background-color: var(--bg-gray);
 }
 
-/* ------------------------------ Código do Cabeçalho ------------------------------ */
+/* ------------------------------ header ------------------------------ */
 
 header {
   background-color: var(--color-primary);
@@ -67,10 +67,60 @@ a, a:hover {
   margin-right: 10px;
 }
 
-/* ---------------------------------- Código dos Cards ------------------------------------*/
+
+/* ---------------------------------- Pagination ------------------------------------*/
+
+.dsmovie-pagination-container {
+  padding: 15px 0;
+  display: flex;
+  justify-content: center;
+}
+
+.dsmovie-pagination-box {
+  width: 180px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; 
+}
+
+.dsmovie-pagination-box p {
+  margin: 0;
+  font-size: 12px;
+  font-weight: 400;
+  color: var(--color-primary);
+}
+
+.dsmovie-pagination-box button {
+  width: 40px;
+  height: 40px;
+  border: 1px solid var(--color-primary);
+  background-color: var(--white);
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dsmovie-pagination-box button:disabled {
+  border: 1px solid var(--text-light-gray);
+}
+
+.dsmovie-pagination-box button img {
+  filter: brightness(0) saturate(100%) invert(22%) sepia(78%) saturate(2047%) hue-rotate(235deg) brightness(93%) contrast(91%);
+}
+
+.dsmovie-pagination-box button:disabled img {
+  filter: unset;
+}
+
+.dsmovie-flip-horizontal {
+  transform: rotate(180deg);
+}
+
+/* ---------------------------------- Cards ------------------------------------*/
 
 #dsmovie-card-list {
-  padding: 40px 10px;
+  padding: 0 10px;
 }
 
 .dsmovie-card {
